# buildpkg

./: .gitignore  Makefile.am  README.md  buildpkg.cc  buildpkg.h  configure.ac  deps.cc  deps.h  dirdiff.cc  dirdiff.h  init_packages.cc  init_packages.h  packages.xml
